--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Index page Anthony Quinn</title>
+        <title>Index page 1 Anthony Quinn</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="bootstrap-3.3.7/bootstrap-3.3.7/docs/examples/signin/signin.css" rel="stylesheet" type="text/css"/>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="js/functions.js" type="text/javascript"></script>
     </head>
     <body>
 
         <div class="container">
+            <div id="printout"></div>
+            <form class="form-signin" onsubmit="login()">
 
-            <form class="form-signin">
+
                 <h2 class="form-signin-heading">Assesement 3 WDP WE5.0</h2>
                 <h2 class="form-signin-heading">Please sign in</h2>
                 <label for="inputEmail" class="sr-only">Email address</label>
@@ -25,14 +28,14 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button id="Btnsubmit" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
             </form>
 
         </div> <!-- /container -->
 
 
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+        <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script--><!-- I commented this out as it is causing an error-->
     </body>
 
 
