Furher work done on "wiring"the buttons to the correct  href's

--- a/public_html/Jumbotron.html
+++ b/public_html/Jumbotron.html
@@ -16,12 +16,9 @@
     <body>
         <p class="footer">
             <button id="home" type="button" class="btn btn-default">Home</button>
-            <button  id="carousel" type="button" class="btn btn-primary">Carousel</button>
-            <button type="button" class="btn btn-success">Success</button>
+            <button  id="carousel_Jumbotron" type="button" class="btn btn-primary">Carousel</button>
+            <button id="landing_Jumbotron" type="button" class="btn btn-success">Landing page</button>
             <button type="button" class="btn btn-info">Info</button>
-            <button type="button" class="btn btn-warning">Warning</button>
-            <button type="button" class="btn btn-danger">Danger</button>
-            <button type="button" class="btn btn-link">Link</button>   
         </p>
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
