--- a/public_html/carousel.html
+++ b/public_html/carousel.html
@@ -14,13 +14,10 @@
     </head>
     <body>
         <p id="footer" class="footer">
-            <button id="home" type="button" class="btn btn-default">Home</button>
+            <button id="home_Carousel" type="button" class="btn btn-default">Home</button>
             <button type="button" class="btn btn-primary">Primary</button>
             <button type="button" class="btn btn-success">Success</button>
             <button type="button" class="btn btn-info">Info</button>
-            <button type="button" class="btn btn-warning">Warning</button>
-            <button type="button" class="btn btn-danger">Danger</button>
-            <button type="button" class="btn btn-link">Link</button>   
         </p>
         <!-- Carousel
         ================================================== -->
