--- a/public_html/index3.html
+++ b/public_html/index3.html
@@ -39,7 +39,7 @@
 
     <!-- Navigation -->
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
+    <!--nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
@@ -61,7 +61,7 @@
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
             </li>
         </ul>
-    </nav>
+    </nav-->
 
     <!-- Header -->
     <header id="top" class="header">
