--- a/public_html/index3.html
+++ b/public_html/index3.html
@@ -26,6 +26,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/functions.js" type="text/javascript"></script>
         <link href="startbootstrap-stylish-portfolio-master/startbootstrap-stylish-portfolio-master/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
+        <link href="CSS/footer.css" rel="stylesheet" type="text/css"/>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,7 +39,13 @@
 <body>
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <!--a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a-->
+    <p id="footer" class="footer">
+            <button id="home_Carousel" type="button" class="btn btn-default">Home</button>
+            <button type="button" class="btn btn-primary">Primary</button>
+            <button type="button" class="btn btn-success">Success</button>
+            <button type="button" class="btn btn-info">Info</button>
+        </p>
     <!--nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -78,8 +85,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>This is a Bootstrap landing page that I found on Github.com</h2>
-                    <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                    <h2>Below  is a link to this   Bootstrap landing page that I found on Github.com</h2>
+                    <p class="lead">https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio</p>
                 </div>
             </div>
             <!-- /.row -->
