Finished the work on this. Just about to commit.  Then it will be uploaded to WebElevate

--- a/public_html/carousel.html
+++ b/public_html/carousel.html
@@ -14,10 +14,9 @@
     </head>
     <body>
         <p id="footer" class="footer">
-            <button id="home_Carousel" type="button" class="btn btn-default">Home</button>
-            <button type="button" class="btn btn-primary">Primary</button>
-            <button type="button" class="btn btn-success">Success</button>
-            <button type="button" class="btn btn-info">Info</button>
+            <button id="home_Carousel" type="button" class="btn btn-default">Landing page </button>
+            <button id="goToSignIn" type="button" class="btn btn-primary">Sign in</button>
+            <button id="goToLogoutFromCarousel" type="button" class="btn btn-info btn-default"><span class="glyphicon glyphicon-log-out"></span>Logout</button>
         </p>
         <!-- Carousel
         ================================================== -->
