--- a/public_html/startbootstrap-stylish-portfolio-master/startbootstrap-stylish-portfolio-master/index.html
+++ b/public_html/startbootstrap-stylish-portfolio-master/startbootstrap-stylish-portfolio-master/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Theme</title>
+    <title> Bootstrap Theme index file/Landing page</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -260,7 +260,9 @@
                 </div>
             </div>
         </div>
+        <div id="msg">
         <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+        </div>
     </footer>
 
     <!-- jQuery -->
