--- a/public_html/logout.html
+++ b/public_html/logout.html
@@ -10,32 +10,27 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
-<body>
+    <body>
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Assessment 3 WDP WE5.0</a>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html"><button  type="button" class="btn btn-info btn-default"><span class="glyphicon glyphicon-log-out"></span>Return to landing page</button>
+</a>
+
+                </div>
+
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Login</a></li>
-                <li><a href="menu.html"></a>Home</li>
-                <li><a href="carousel.html">Carousel</a></li>
-                <li><a href="#">Page 3</a></li>
-                <li><a href="#">Page 4</a></li>
+        </nav>
+        <div class="container">
 
-            </ul>
-        </div>
-    </nav>
-<div class="container">
+            <div class="starter-template">
+                <h1>Bootstrap Logout</h1>
+                <p class="lead">This can be the logout page .<br> The user would be directed to this page to confirm that they have logged out</p>
+            </div>
 
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">This can be the logout page .<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
+        </div><!-- /.container -->
 
-    </div><!-- /.container -->
-    
 
-</body>
+    </body>
 </html>
